_src/styles/modules/content.scss
.content {
    font-family: $font-family-serif;

    & > * {
        margin-top: 1.25em;
        margin-bottom: 1.25em;
    }

    img {
        max-width: 100%;
        cursor: pointer;
    }

    blockquote {
        font-size: $font-size-base;
        font-style: italic;
    }

    .published {
        font-size: $font-size-small;
        color: $gray;
    }

    pre, code {
        @media (max-width: $screen-xs-max) {
            overflow-x: scroll;
            white-space: pre;
        }

        font-family: Consolas,"Liberation Mono",Menlo,Courier,monospace;
        font-size: 12px;
        font-weight: 400;
        line-height: 16.8px;
    }
    
    table {
        font-size: 17px;

        & > thead {
            white-space: nowrap;
        }
    }

    // only one column in small screens
    @media (max-width: $screen-md-max) {
        clear: both;
    }
}

